{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 64,
  "lineage": "3a1b5ced-2deb-3a1a-9d41-2d645d75c1f2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:subnet/subnet-33fee75b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-33fee75b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600417590558",
            "tags": {
              "Name": "Default subnet for us-west-2a"
            },
            "tags_all": {
              "Name": "Default subnet for us-west-2a"
            },
            "vpc_id": "vpc-55cd3c3e"
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:vpc/vpc-55cd3c3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-e728f48c",
            "default_route_table_id": "rtb-16f9407d",
            "default_security_group_id": "sg-5e60c43c",
            "dhcp_options_id": "dopt-c4844eaf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-55cd3c3e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-16f9407d",
            "owner_id": "600417590558",
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "development",
              "Name": "Default VPC",
              "Project": "teratrilogy",
              "ProjectId": "carbon-scene-314313",
              "Provisioner": "terraform"
            },
            "tags_all": {
              "Author": "Leon Mwandiringa",
              "Environment": "development",
              "Name": "Default VPC",
              "Project": "teratrilogy",
              "ProjectId": "carbon-scene-314313",
              "Provisioner": "terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0600b1bef20a0c212",
            "arn": "arn:aws:ec2:us-east-2:600417590558:instance/i-0b48ae241e84041a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b48ae241e84041a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-026679d2cc027da66",
            "private_dns": "ip-172-31-0-33.us-east-2.compute.internal",
            "private_ip": "172.31.0.33",
            "public_dns": "ec2-3-129-250-169.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.250.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0834b78e3e97df951",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04cb3b54fae314de5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-33fee75b",
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "development",
              "Name": "instance",
              "Project": "teratrilogy",
              "ProjectId": "carbon-scene-314313",
              "Provisioner": "terraform"
            },
            "tags_all": {
              "Author": "Leon Mwandiringa",
              "Environment": "development",
              "Name": "instance",
              "Project": "teratrilogy",
              "ProjectId": "carbon-scene-314313",
              "Provisioner": "terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04cb3b54fae314de5"
            ]
          },
          "dependencies": [
            "module.ec2.aws_default_subnet.default",
            "module.ec2.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:security-group/sg-04cb3b54fae314de5",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cb3b54fae314de5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance-security-group",
            "name_prefix": "",
            "owner_id": "600417590558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "development",
              "Name": "instance_sg",
              "Project": "teratrilogy",
              "ProjectId": "carbon-scene-314313",
              "Provisioner": "terraform"
            },
            "tags_all": {
              "Author": "Leon Mwandiringa",
              "Environment": "development",
              "Name": "instance_sg",
              "Project": "teratrilogy",
              "ProjectId": "carbon-scene-314313",
              "Provisioner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-55cd3c3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.gce",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].gcp",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-20T12:46:03.010-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbon-scene-314313/global/firewalls/default-allow-http",
            "log_config": [],
            "name": "default-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-scene-314313/global/networks/default",
            "priority": 1000,
            "project": "carbon-scene-314313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-scene-314313/global/firewalls/default-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.gce",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].gcp",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210514",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/carbon-scene-314313/zones/us-east1-c/disks/teratrilogy-development-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/carbon-scene-314313/zones/us-east1-c/instances/teratrilogy-development-vm",
            "instance_id": "2252234660837555540",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "MypCpN0qkJc=",
            "metadata_startup_script": "sudo apt-get update \u0026\u0026 sudo apt-get install apache2 -y \u0026\u0026 echo '\u003c!doctype html\u003e\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eHello from TerraTrilogy on Google Cloud!\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e' | sudo tee /var/www/html/index.html",
            "name": "teratrilogy-development-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.229.38.176",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/carbon-scene-314313/global/networks/default",
                "network_ip": "10.142.0.6",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/carbon-scene-314313/regions/us-east1/subnetworks/default",
                "subnetwork_project": "carbon-scene-314313"
              }
            ],
            "project": "carbon-scene-314313",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-scene-314313/zones/us-east1-c/instances/teratrilogy-development-vm",
            "service_account": [
              {
                "email": "teratrilogy@carbon-scene-314313.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "module.gce.google_service_account.default"
          ]
        }
      ]
    }
  ]
}